--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@capacitor/core": "3.3.4",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.2.0",
+    "@capacitor/splash-screen": "^1.2.0",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^6.0.0",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/storage-angular": "^3.0.6",
     "codelyzer": "^6.0.2",
+    "cordova-sqlite-storage": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
